--- a/src/v1/plugins/my-people/index.html
+++ b/src/v1/plugins/my-people/index.html
@@ -7,6 +7,7 @@
     <title>My People</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script src="my-people/person.class.js"></script>
     <script src="/v1/nomie-plugin.js"></script>
     <link href="/styles/nui@v1.css" rel="stylesheet" />
 
