chore: my people style and default work

--- a/src/v1/plugins/my-people/index.html
+++ b/src/v1/plugins/my-people/index.html
@@ -526,7 +526,7 @@
         </section>
       </div>
       <footer class="nui-bg-glass nui-toolbar sticky space-x-1 pl-6 bottom-0">
-        <h2 class="nui-text-primary">My People</h2>
+        <h2 class="nui-text-700">My People</h2>
         <button
           class="nui-button nui-text-2xl nui-text-inverse"
           @click="selectPersonTrackable()"
