--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nomie Plugin Repo - Redirecting...</title>
   <script>
-    window.location.href = '/v1';
+    window.location.href = window.location.href+'v1';
   </script>
 </head>
 <body>
