--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nomie Plugin Repo - Redirecting...</title>
   <script>
-    window.location.href = window.location.href+'v1';
+    window.location.href = '/nomie-plugins/v1';
   </script>
 </head>
 <body>
-  <a href="/v1">Continue</a>
+  <a href="/nomie-plugins/v1">Continue</a>
 </body>
 </html>
