fix href to host on ghpages

--- a/src/v1/plugins/my-people/index.html
+++ b/src/v1/plugins/my-people/index.html
@@ -547,7 +547,7 @@
         </button>
       </footer>
     </div>
-    <script src="/v1/plugins/my-people/my-people.js"></script>
+    <script src="../../../v1/plugins/my-people/my-people.js"></script>
     <!-- 100% privacy friendly analytics -->
     <script
       async
