fix href to host on ghpages

--- a/src/v1/plugins/meditate/index.html
+++ b/src/v1/plugins/meditate/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nomie Meditate</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/v1/nomie-plugin.js"></script>
+    <script src="../../../v1/nomie-plugin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
   </head>
@@ -171,7 +171,7 @@
         </button>
       </section>
     </div>
-    <script src="/v1/plugins/meditate/meditate.js"></script>
+    <script src="../../../v1/plugins/meditate/meditate.js"></script>
     <!-- 100% privacy friendly analytics -->
     <script
       async
