--- a/src/v1/plugins/weather/index.html
+++ b/src/v1/plugins/weather/index.html
@@ -9,7 +9,7 @@
         content="width=device-width, initial-scale=1.0" />
   <title>Nomie Weather Plugin</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="/v1/nomie-plugin.js"></script>
+  <script src="../../../v1/nomie-plugin.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   <link href="/styles/nui@v1.css"
         rel="stylesheet" />
@@ -156,7 +156,7 @@
     </footer>
   </main>
 
-  <script src="/v1/plugins/weather/weather.js"></script>
+  <script src="../../../v1/plugins/weather/weather.js"></script>
 
   <!-- 100% privacy friendly analytics -->
   <script async
