--- a/src/v1/plugins/memories/index.html
+++ b/src/v1/plugins/memories/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nomie Weather Plugin</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/v1/nomie-plugin.js"></script>
+    <script src="../../../v1/nomie-plugin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   </head>
   <body class="bg-gray-200 dark:bg-gray-800">
@@ -70,7 +70,7 @@
         </div>
       </section>
     </div>
-    <script src="/v1/plugins/memories/memories.js"></script>
+    <script src="../../../v1/plugins/memories/memories.js"></script>
     <!-- 100% privacy friendly analytics -->
     <script
       async
