--- a/src/v1/plugins/tester/index.html
+++ b/src/v1/plugins/tester/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nomie Weather Plugin</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/v1/nomie-plugin.js"></script>
+    <script src="../../../v1/nomie-plugin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   </head>
   <body class="bg-white dark:bg-gray-800">
@@ -68,6 +68,6 @@
         </li>
       </ul>
     </div>
-    <script src="/v1/plugins/tester/tester.js"></script>
+    <script src="../../../plugins/tester/tester.js"></script>
   </body>
 </html>
