--- a/src/v1/plugins/meditate/index.html
+++ b/src/v1/plugins/meditate/index.html
@@ -23,10 +23,80 @@
 
       <div
         v-if="!activeVideo"
-        class="logo z-0 fixed top-8 left-0 right-0 flex items-center justify-center px-4"
+        class="logo z-0 fixed top-2 left-0 right-0 flex items-center justify-center px-4"
       >
         <h1 class="font-mono text-2xl font-bold text-white">
           Guided Meditations
+        </h1>
+      </div>
+      <div
+        v-if="!activeVideo"
+        class="logo z-0 fixed top-6 left-0 right-0 flex items-center justify-center px-4"
+      >
+        <button
+            @click="addRecord()"
+            class="mt-4 py-2 px-4 bg-black rounded-xl text-purple-200 font-bold"
+          >
+          Add Meditation ➕
+        </button>
+      </div>
+      <!-- Add Meditation -->
+      <div  v-if="!activeVideo && addMeditation" class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
+       <div class="fixed inset-0 z-10 overflow-y-auto">
+          <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
+            <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg">
+              <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
+                <div class="sm:flex sm:items-start">
+                  <div class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-green-100 sm:mx-0 sm:h-10 sm:w-10">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="nx rz axt"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5"></path></svg>
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5"></path>
+                    </svg>
+                  </div>
+                  <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
+                    <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Add Meditation</h3>
+                    
+                    <div class="px-6 py-6 lg:px-8">
+                      <form class="space-y-1" action="#">
+                          <div>
+                              <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Meditation Name</label>
+                              <input v-model="new_name" type="input" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="My Favorite Meditation" required>
+                          </div>
+                          <div>
+                              <label for="duration" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Duration (00:00:00)</label>
+                              <input v-model="new_duration" type="input" name="duration" id="duration" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="00:02:00" required>
+                          </div>
+                          <div>
+                              <label for="description" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
+                              <input v-model="new_description" type="input" name="description" id="description" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="This is definately my favorite Meditation" required>
+                          </div>
+                          <div>
+                              <label for="note" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Note (at least change duration)</label>
+                              <input v-model="new_note" type="input" name="note" id="note" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="Only practice in the evening" required>
+                         </div>
+                         <div>
+                              <label for="youtubeid" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">YoutubeId</label>
+                              <input v-model="new_youtubeid" type="input" name="youtubeid" id="youtubeid" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="YouTube ID" required>
+                         </div>
+                      </form>
+                    </div>      
+                  </div>
+                </div>
+              </div>
+              <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+                <button type="button" @click="saveAddRecord()" class="inline-flex w-full justify-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-500 sm:ml-3 sm:w-auto">Add</button>
+                <button type="button" @click="cancelAddRecord()" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        v-if="!activeVideo && addMeditation"
+        class="logo z-0 fixed top-8 left-0 right-0 flex items-center justify-center px-4"
+      >
+        <h1 class="font-mono text-2xl font-bold text-white">
+          Add Meditation Placeholder
         </h1>
       </div>
       <!-- Completed Video -->
@@ -74,12 +144,27 @@
         class="p-4 z-50 absolute top-0 left-0 right-0 bottom-0 overflow-y-auto"
       >
         <div class="py-2 flex flex-col text-center">
-          <div class="grid grid-cols-2 gap-4 mb-2">
+          <div class="grid grid-cols-3 gap-4 mb-2">
             <button
               @click="cancelActive()"
               class="w-full border border-white text-white font-semibold mx-auto max-w-xs px-4 py-2 rounded-lg"
             >
               ← Back
+            </button>
+            <button
+              @click="deleteActive(activeVideo.youtubeId)"
+              v-if="activeVideo.userDefined"
+              class="w-full border border-white text-white font-semibold mx-auto max-w-xs px-4 py-2 rounded-lg"
+            >
+              🗑️ Delete
+            </button>
+            <button
+              @click="deleteActive(activeVideo.youtubeId)"
+              v-if="!activeVideo.userDefined"
+              class="w-full border border-white text-white font-semibold mx-auto max-w-xs px-4 py-2 rounded-lg"
+              disabled
+            >
+              🗑️ Delete
             </button>
             <button
               class="bg-white bg-opacity-30 px-4 py-2 rounded-md text-white"
